implemented authentication and consolidate socket connection into Context provider

--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,8 @@
 REACT_APP_VERSION=${MARSTAL_VERSION_PROD}
 REACT_APP_SERVER_URL=${MARSTAL_SERVER_URL_PROD}
+
+
+REACT_APP_AZURE_AUTHORITY=${MARSTAL_AZURE_AUTHORITY_PROD}
+REACT_APP_AZURE_CLIENT_ID=${MARSTAL_AZURE_CLIENT_PROD}
+REACT_APP_REDIRECT_URL=${MARSTAL_REDIRECT_URL_PROD}
+REACT_APP_CLIENT_ID=${MARSTAL_CLIENT_ID_PROD}
