--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,7 @@
 REACT_APP_VERSION=${MARSTAL_VERSION_DEV}
 REACT_APP_SERVER_URL=${MARSTAL_SERVER_URL_DEV}
 
+REACT_APP_AZURE_AUTHORITY=${MARSTAL_AZURE_AUTHORITY_DEV}
+REACT_APP_AZURE_CLIENT_ID=${MARSTAL_AZURE_CLIENT_ID_DEV}
+REACT_APP_REDIRECT_URL=${MARSTAL_REDIRECT_URL_DEV}
+REACT_APP_CLIENT_ID=${MARSTAL_CLIENT_ID_DEV}
