--- a/.env.qa
+++ b/.env.qa
@@ -1,2 +1,7 @@
 REACT_APP_VERSION=${MARSTAL_VERSION_QA}
 REACT_APP_SERVER_URL=${MARSTAL_SERVER_URL_QA}
+
+REACT_APP_AZURE_AUTHORITY=${MARSTAL_AZURE_AUTHORITY_QA}
+REACT_APP_AZURE_CLIENT_ID=${MARSTAL_AZURE_CLIENT_ID_QA}
+REACT_APP_REDIRECT_URL=${MARSTAL_REDIRECT_URL_QA}
+REACT_APP_CLIENT_ID=${MARSTAL_CLIENT_ID_QA}
